fix – frame and gap issues on certain ios devices
– fix frame built with drop shadow to render faster by forcing use of gpu with new .hardware-excelerated class.
– tweak flexGapFix for cards and gallery by updating is-layout-flex with fix. Might need to rename column-flexGapFix to be more universal since now applied to is-layout-flex

--- a/src/scss/framework/styles/_frame.scss
+++ b/src/scss/framework/styles/_frame.scss
@@ -227,6 +227,8 @@ outline-offset: calc(-1 * ($spacer / 2));
 
 .framedOrangeShadow {
   filter: drop-shadow(1.25rem 1.25rem 0px $utorange);
+  @extend .hardware-excelerated;
+
   margin: 1rem;
   .wp-element-caption {
     // filter: drop-shadow(0px 0px 0px rgba(255, 255, 255, 0.5)) !important;
